working on ticket 30

--- a/client/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/client/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -19,4 +19,18 @@
     &__subtext {
         @include mobile-medium-font;
     }
+    &__actions-edit-box {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: .5rem 1rem;
+        width: 81px;
+        height: 38px;
+    }
+    &__actions-edit {
+        @include tablet {
+            background-color: $instock-indigo;
+            border-radius: 20px;
+        }
+    }
 }
