--- a/client/src/components/SearchBar/SearchBar.scss
+++ b/client/src/components/SearchBar/SearchBar.scss
@@ -1,7 +1,8 @@
 @use '../../Styles/partials/mixins' as *;
 
 .search {
-
+    width: 100%;
+    
     &__bar {
     background-image: url('http://localhost:8080/Assets/Icons/search-24px.svg');
     background-repeat: no-repeat;
@@ -13,5 +14,4 @@
     border: 2px solid $cloud;
     padding-left: 1rem
     }
-  
 }
