--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -111,6 +111,8 @@
         justify-content: space-between;
         @include tablet {
             flex-direction: row;
+            width: 100%;
+            display: flex;
         }
     }
     &__divider {
@@ -119,6 +121,26 @@
         }
         @include desktop {
             display: none;
+        }
+    }
+    &__item-category {
+        @include tablet {
+            display: flex;
+            width: 54%;
+            justify-content: space-around;
+        }
+    }
+    &__divitems {
+        @include tablet {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+        }
+    }
+    &__allcontent {
+        @include tablet {
+            display: flex;
+            width: 100%;
         }
     }
 }
